--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 		<ul class="nav-menu">
 			<li class="nav-items"><a href="#">Home</a></li>
 			<li class="nav-items"><a href="donate.html" target="_blank">Donate</a></li>
+			<li class="nav-items"><a href id="LoginWithAmazon">
+				<img border="0" alt="Login with Amazon"
+					src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
+					width="156" height="32" />
+			 </a></li>
 		</ul>
 	</nav>
 	<body>
