--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </nav>
 
 <body>
+	<!-- test comment -->
 	<!-- amazon login pointer div -->
 	<div id="amazon-root"></div>
 	<script type="text/javascript">
