--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 <br/>
-<div class="progress" style = "">
+<div class="progress">
 	<div class="bar" style="width:99%">
 		<p class="percent">99%</p>
 	</div>
