comment test for new branch

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
 <body>
 <section>
-	<!-- amazon login pointer div -->
-	
-
-	<!-- page begins here -->
+	<!-- testing comments -->
 
 	<div class="title-container">
 		<div class="title">
