--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Loading React (doesn't work on liveserver) -->
 	<script src="js/react.js" type = "text/babel"></script>
-	<title>Project: Dubhacks</title>
+	<title>SprucedUp</title>
 </head>
 
 <body>
